                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 26-06-2006 updated: Dutch language file (Thnx to nightspirit)
 - 26-06-2006 updated: Chinese (Simple) language file (Thnx to omenpica)
 - 26-06-2006 updated: Russian language file (Thnx to que_)
 - 26-06-2006 updated: Norwegian language file (Thnx to vnm)
 - 26-06-2006 changed: cddb info is displayed even if tag reading is disabled
 - 26-06-2006 fixed: if cddb is disabled, the content of a cd is listed, then cddb is enabled, the info from cddb is not displayed
 - 26-06-2006 changed: moved playlist window content into a directory class
 - 26-06-2006 changed: moved shares of media windows into the view state
 - 26-06-2006 fixed: some dll loader cleanup and additions, attempt 2 (python was broken since the 24th after previous version of this)
 - 25-06-2006 fixed: reverted elupus "dll loader cleanup and additions" because it broke python
 - 25-06-2006 fixed: Subtitles should now word-wrap (based on calibration values) when TTF fonts are used.
 - 25-06-2006 added: Font fallback to "font13" if a requested font isn't available.
 - 25-06-2006 fixed: image controls with both <info> and <texture> tags fall back to the <texture> tag when no info is present.
 - 25-06-2006 fixed: text strings where ending part was truncated and that ended with a newline character, could crash font renderer
 - 23-06-2006 fixed: Better handling of overlapping strings in the listcontrol.
 - 23-06-2006 fixed: Jump to section from a settings category could hit the wrong section if sections had been removed from the GUI via AdvancedSettings.xml
 - 23-06-2006 fixed: Don't re-activate a window on Back if <previouswindow> points to ourselves.