@@ -230,6 +230,10 @@ bool CLocalizeStrings::Load(const CStdString& strFileName)
   m_vecStrings[20089] = "Drive Space Free";
   m_vecStrings[20090] = "Enter the name of an existing Share";
 
+  m_vecStrings[20097] = "Fetching album info";
+  m_vecStrings[20098] = "Fetching info for album";
+  m_vecStrings[20099] = "Can't rip CD or Track while playing from CD";
+
   // new strings for weather localization
   m_vecStrings[1411] = "with";
   m_vecStrings[1412] = "windy";
